--- a/prod/index.html
+++ b/prod/index.html
@@ -301,7 +301,11 @@
                             Уникальная возможность пообщаться с&#160;CDO, CDTO, директорами по&#160;данным и&#160;экспертами крупнейших компаний, обменяться опытом и&#160;наладить полезные связи.
                         </div>
                     </div>
-                    <img src="./img/dis/card-4.svg" alt="" class="dis__card-img">
+                    <picture>
+<source srcset="./img/dis/card-4.webp 1x, ./img/dis/card-4@2x.webp 2x" type="image/webp">
+<source srcset="./img/dis/card-4.png 1x, ./img/dis/card-4@2x.png 2x" type="image/png">
+<img src="./img/dis/card-4.png" alt="" class="dis__card-img">
+</picture>
                 </div>
             </div>
             <div class="dis__section panel" id="last-panel">
