--- a/src/html/index.html
+++ b/src/html/index.html
@@ -218,7 +218,7 @@
                             Уникальная возможность пообщаться с CDO, CDTO, директорами по данным и экспертами крупнейших компаний, обменяться опытом и наладить полезные связи.
                         </div>
                     </div>
-                    <img src="./img/dis/card-4.svg" alt="" class="dis__card-img">
+                    <img src="./img/dis/card-4.png" alt="" class="dis__card-img">
                 </div>
             </div>
             <div class="dis__section panel" id="last-panel">
