add new info/fix blocks

--- a/prod/index.html
+++ b/prod/index.html
@@ -239,7 +239,10 @@
                             Погрузимся в&#160;историю рынка данных, вспомним самые сложные и&#160;яркие кейсы, проанализируем накопленный опыт и&#160;поделимся ценными инсайтами.
                         </div>
                     </div>
-                    <img src="./img/dis/card-1.svg" alt="" class="dis__card-img">
+                    <picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-1.svg">
+                        <img src="./img/dis/card-1.svg" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -258,10 +261,9 @@
                         </div>
                     </div>
                     <picture>
-<source srcset="./img/dis/card-2.webp 1x, ./img/dis/card-2@2x.webp 2x" type="image/webp">
-<source srcset="./img/dis/card-2.png 1x, ./img/dis/card-2@2x.png 2x" type="image/png">
-<img src="./img/dis/card-2.png" alt="" class="dis__card-img">
-</picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-2.png">
+                        <img src="./img/dis/card-2.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -280,10 +282,9 @@
                         </div>
                     </div>
                     <picture>
-<source srcset="./img/dis/card-3.webp 1x, ./img/dis/card-3@2x.webp 2x" type="image/webp">
-<source srcset="./img/dis/card-3.png 1x, ./img/dis/card-3@2x.png 2x" type="image/png">
-<img src="./img/dis/card-3.png" alt="" class="dis__card-img">
-</picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-3.png">
+                        <img src="./img/dis/card-3.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -302,10 +303,9 @@
                         </div>
                     </div>
                     <picture>
-<source srcset="./img/dis/card-4.webp 1x, ./img/dis/card-4@2x.webp 2x" type="image/webp">
-<source srcset="./img/dis/card-4.png 1x, ./img/dis/card-4@2x.png 2x" type="image/png">
-<img src="./img/dis/card-4.png" alt="" class="dis__card-img">
-</picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-4.png">
+                        <img src="./img/dis/card-4.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel" id="last-panel">
