--- a/src/html/index.html
+++ b/src/html/index.html
@@ -164,7 +164,10 @@
                             Погрузимся в историю рынка данных, вспомним самые сложные и яркие кейсы, проанализируем накопленный опыт и поделимся ценными инсайтами.
                         </div>
                     </div>
-                    <img src="./img/dis/card-1.svg" alt="" class="dis__card-img">
+                    <picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-1.svg">
+                        <img src="./img/dis/card-1.svg" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -182,7 +185,10 @@
                             Покажем, как искусственный интеллект уже встроен в решения по управлению данными, какие задачи он автоматизирует и как максимально эффективно его использовать.
                         </div>
                     </div>
-                    <img src="./img/dis/card-2.png" alt="" class="dis__card-img">
+                    <picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-2.png">
+                        <img src="./img/dis/card-2.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -200,7 +206,10 @@
                             Впервые представим Селену – платформу для аналитики в реальном времени. Презентацию проведет RnD-инженер, готовый ответить на любые вопросы.
                         </div>
                     </div>
-                    <img src="./img/dis/card-3.png" alt="" class="dis__card-img">
+                    <picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-3.png">
+                        <img src="./img/dis/card-3.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel">
@@ -218,7 +227,10 @@
                             Уникальная возможность пообщаться с CDO, CDTO, директорами по данным и экспертами крупнейших компаний, обменяться опытом и наладить полезные связи.
                         </div>
                     </div>
-                    <img src="./img/dis/card-4.png" alt="" class="dis__card-img">
+                    <picture>
+                        <source media="(max-width: 768px )" srcset="./img/dis/card-mobile-4.png">
+                        <img src="./img/dis/card-4.png" alt="" class="dis__card-img">
+                    </picture>
                 </div>
             </div>
             <div class="dis__section panel" id="last-panel">
