--- a/prod/index.html
+++ b/prod/index.html
@@ -2936,7 +2936,7 @@
                                 <div class="program__tr-speakers-inner">
                                     <div class="program__speaker">
                                         <div class="program__speaker-pic">
-                                            <img src="./img/speakers/man.png" alt=""
+                                            <img src="./img/speakers/kurtov.png" alt=""
                                                  class="program__speaker-img">
                                         </div>
                                         <div class="program__speaker-info">
