--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1805,7 +1805,7 @@
                             </div>
                         </div>
 
-                        <div class="program__tr">
+                        <div class="program__tr program__tr--weekend">
                             <div class="program__tr-head">
                                 <div class="program__tr-time title title--ff-regular title--small title--primary title--w-regular">
                                     <div class="program__tr-time-wrap d-flex">
@@ -1841,38 +1841,75 @@
                                 <div class="program__tr-accordion accordion--plenary accordion js-session-accordion">
                                     <div class="program__accordion-item accordion__item js-session-accordion-item">
                                         <div class="program__accordion-item-heading accordion__item-heading js-session-accordion-trigger">
-                                            <span class="program__accordion-item-heading-inner d-flex">
-                                                <svg width="16" height="23" class="program__tr-bookmark">
-                                                    <use href="./img/svgsprite/sprite.symbol.svg#bookmark"></use>
-                                                </svg>
+                                            <span class="program__accordion-item-heading-inner d-flex flex-justify-sb">
                                                 <span class="title title--small title--primary title--w-regular">
-                                                    Перерыв
-                                                </span>
-                                            </span>
-                                            <div class="program__meetup-name-wrap">
-                                                <span class="program__meetup-name text text--normal text--primary text--w-regular">
-                                                    <svg width="20" height="20" class="program__tr-bookmark">
-                                                        <use href="./img/svgsprite/sprite.symbol.svg#meetup"></use>
-                                                    </svg>
-                                                    Митап
+                                                    Обед
                                                 </span>
                                                 <span class="program__meetup-hall text text--normal text--primary text--w-regular">
-                                                    ROTHSCHILDS HALL
+                                                    Зал BACKYARD
                                                 </span>
                                                 <span class="accordion__item-arrow">
                                                     <svg class="accordion__svg-arrow" width="24px" height="24px">
                                                         <use href="./img/svgsprite/sprite.symbol.svg#arrow-accordion"></use>
                                                     </svg>
                                                 </span>
-                                            </div>
+                                            </span>
                                         </div>
                                         <div class="accordion__item-panel js-session-accordion-panel">
-                                            <div class="accordion__item-answer title title--small title--primary title--w-regular">
-                                                Применение ИИ для автоматической классификации и атрибутирования
-                                                записей
+                                            <div class="program__item-meetup">
+                                                <div class="program__item-meetup-time-wrap d-flex flex-align-center">
+                                                    <svg width="24" height="24" class="program__item-meetup-clock">
+                                                        <use href="./img/svgsprite/sprite.symbol.svg#clock"></use>
+                                                    </svg>
+                                                    <div class="program__tr-time-num title title--primary title--w-regular">
+                                                        12:50 — 13:05
+                                                    </div>
+                                                </div>
+                                                <div class="program__item-meetup-name d-flex">
+                                                    <span class="program__meetup-name text text--normal text--primary text--w-regular">
+                                                        <svg width="20" height="20" class="program__meetup-bookmark">
+                                                            <use href="./img/svgsprite/sprite.symbol.svg#meetup"></use>
+                                                        </svg>
+                                                        Митап
+                                                    </span>
+                                                    <span class="program__meetup-name-hall text text--normal text--primary text--w-regular">
+                                                        ROTHSCHILDS HALL - зона рядом с камином в выставочном зале
+                                                    </span>
+                                                </div>
+                                                <div class="program__accordion-item-ask accordion__item-ask title title--small title--primary title--w-regular">
+                                                    Применение ИИ для автоматической классификации и атрибутирования
+                                                    записей
+                                                </div>
+                                                <div class="accordion__item-answer text text--normal text--primary text--w-regular">
+                                                     Участники: Кудинов Игорь, Скоробогачёв Константин
+                                                </div>
                                             </div>
-                                            <div class="accordion__item-answer text text--normal text--primary text--w-regular">
-                                                 Участники: Кудинов Игорь, Скоробогачёв Константин
+                                            <div class="program__item-meetup">
+                                                <div class="program__item-meetup-time-wrap d-flex flex-align-center">
+                                                    <svg width="24" height="24" class="program__item-meetup-clock">
+                                                        <use href="./img/svgsprite/sprite.symbol.svg#clock"></use>
+                                                    </svg>
+                                                    <div class="program__tr-time-num title title--primary title--w-regular">
+                                                        13:10 — 13:25
+                                                    </div>
+                                                </div>
+                                                <div class="program__item-meetup-name d-flex">
+                                                    <span class="program__meetup-name text text--normal text--primary text--w-regular">
+                                                        <svg width="20" height="20" class="program__meetup-bookmark">
+                                                            <use href="./img/svgsprite/sprite.symbol.svg#meetup"></use>
+                                                        </svg>
+                                                        Митап
+                                                    </span>
+                                                    <span class="program__meetup-name-hall text text--normal text--primary text--w-regular">
+                                                        ROTHSCHILDS HALL - зона рядом с камином в выставочном зале
+                                                    </span>
+                                                </div>
+                                                <div class="program__accordion-item-ask accordion__item-ask title title--small title--primary title--w-regular">
+                                                    Кейс ИИ в Universe Data Governance по автоописанию терминов
+                                                </div>
+                                                <div class="accordion__item-answer text text--normal text--primary text--w-regular">
+                                                    Участники: Юлия Гордиенко
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
