--- a/prod/img/svgsprite/stack/sprite.stack.html
+++ b/prod/img/svgsprite/stack/sprite.stack.html
@@ -116,6 +116,7 @@ They might well be outsourced to an external stylesheet of course.
  .svg-bookmark-orange-dims { width: 18px; height: 26px; }
  .svg-btn-arrow-dims { width: 37px; height: 36px; }
  .svg-business-session-dims { width: 32px; height: 32px; }
+ .svg-camera-dims { width: 22px; height: 22px; }
  .svg-check-gray-dims { width: 24px; height: 24px; }
  .svg-check-white-dims { width: 24px; height: 24px; }
  .svg-clock-dims { width: 32px; height: 32px; }
@@ -227,6 +228,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                         <img src="svg/sprite.stack.svg#business-session" class="svg-business-session-dims" alt="business-session">
                     </div>
                     <h2>business-session, </h2>
+                </li>
+             <li title="camera">
+                    <div class="icon-box">
+                        <img src="svg/sprite.stack.svg#camera" class="svg-camera-dims" alt="camera">
+                    </div>
+                    <h2>camera, </h2>
                 </li>
              <li title="check-gray">
                     <div class="icon-box">
@@ -344,7 +351,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Mon, 14 Apr 2025 10:46:46 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Wed, 16 Apr 2025 17:11:33 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
